gcc/testsuite/rust/rustc/ui/impl-trait/precise-capturing/forgot-to-capture-const.rs
fn constant<const C: usize>() -> impl Sized + use<> {}
// { dg-error "" "" { target *-*-* } .-1 }

fn main() {}

